[Sarthik]ADD: wishlist model, addToWishlist, getFromWishlist and removeFromWishlist APIs
