# src/routes/book.route.js
@@ -5,9 +5,9 @@ import { bookValidator } from '../validators/book.validator';
 
 const router = express.Router();
 
-router.post('/', bookValidator, userAuth, bookController.addBook);
-
 router.get('/', bookController.getAllBooks);
+
+router.post('/addbook', bookValidator, userAuth, bookController.addBook);
 
 router.put('/:id', userAuth, bookController.updateBook);
 
